FIX: fixed style for OP validation -fixed box shadow on main menu -fixed menu_card size on main menu -set submenu as cards on low res devives -set back img display to visible -fixed next-box issue at 951 px window width -fixed zoom issue on main menu

--- a/sass_files/_base.scss
+++ b/sass_files/_base.scss
@@ -56,6 +56,7 @@ main{
 
 h2{
     font-size:2.3rem;
+    text-align:center;
 }
 h3{
     font-size:2.5rem;
@@ -63,6 +64,7 @@ h3{
 }
 h4 {
     font-size: 2em;
+    text-align:center;
 }
 
 .row{
@@ -80,4 +82,5 @@ h4 {
     width:0.1em;
     border-radius:50%;
     background-color:$main-text;
+    overflow-x:visible;
 }
