--- a/sass_files/_components.scss
+++ b/sass_files/_components.scss
@@ -39,8 +39,11 @@ footer{
    }
 }
 
-//inside the main menu cards settings
+//main menu cards settings
 .menu {
+    &_card{
+        padding:20px;
+    }
     &_inside {
         display: flex;
         flex-direction: column;
@@ -49,17 +52,19 @@ footer{
         transform: scale(1);
         opacity: 1;
         transition: all ease-in-out 0.5s;
+        padding-left:15px;
+        padding-right:15px;
     }
 
     &_box {
         width: 25%;
-        height: 40vw;
+        height: 50vw;
         margin: 5%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        box-shadow: 0px 0px 5px 5px #BDBDBD;
+        box-shadow: 0px 0px 10px -3px black;
         @include zoom_mainmenu;
     }
 
@@ -92,7 +97,7 @@ footer{
     }
 
     &_card {
-        box-shadow: 0px 0px 5px 5px #BDBDBD;
+        box-shadow: 0px 0px 10px -3px black;
         height: 100%;
         width: 70%;
         margin: auto;
@@ -132,8 +137,7 @@ footer{
     }
 
     &_trait {
-        width: 30%;
-        height: 10px;
+        flex:1 1 auto;
         align-self: center;
 
         &_reverse {
