--- a/sass_files/_layouts.scss
+++ b/sass_files/_layouts.scss
@@ -104,7 +104,7 @@
     color:$main-text;
     padding:1% 10%;
     font-family:Arial;
-
+    overflow-x:visible;
 }
 
 
