--- a/sass_files/_mediaqueries.scss
+++ b/sass_files/_mediaqueries.scss
@@ -3,71 +3,110 @@
         width:35%;
     }
 }
-
-@media screen and (max-width:960px){
-    main{
-        padding:0px;
-    }
-    .menu_box{
-        width:95%;
-        margin:auto;
-        margin-top:30px;
-        margin-bottom:30px;
-        height:90vw;
+@media screen and (max-width:855px) {
+    .main_section{
+        flex-direction:column;
+        align-items:center;
     }
     .menu{
-        &_1{
-            &_name{
-                padding-top:0px;
-            }
-        }
-        &_name{
-            h2{
-                text-align:center;
-            }
-        }
-    }
-    .submenu {
-        &_card {
-            width: 100%;
-            min-height: 95vh;
-            box-shadow:none;
-            padding:0px;
-            padding-top:2vh;
-            .row{
-                width:95%;
-                margin:auto;
-                h4{
-                    margin:auto;
-                }
-            }
-        }
-        &_content{
-            &_1{
-                font-size:0.8em;
-            }
-            &_2{
-                &_orange{
-                    font-size:0.8em;
-                }
-                &_purple{
-                    font-size:0.8em;
-                }
-                &_blue{
-                    font-size:0.8em;
-                }
-            }
-            &_3{
-                font-size:0.8em;
-                margin-right:5px;
-            }
-        }
-        &_trait {
-            display: none;
+        &_box {
+        width: 50vw;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        height: 80vw;
+        padding:20px;
         }
     }
 
-    .subtitle{
-       margin:auto;
+    .submenu {
+        &_card {
+            width: 95%;
+            min-height: 95vh;
+            box-shadow: none;
+            padding: 0px;
+            padding-top: 2vh;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-bottom: 3px;
+            box-shadow: 0px 0px 10px -3px black;
+
+            .row {
+                width: 95%;
+                margin: auto;
+
+                h4 {
+                    margin: auto;
+                }
+            }
         }
+    }
 }
+    @media screen and (max-width:500px) {
+        main {
+            padding: 0px;
+        }
+
+        .menu_box {
+            width: 80%;
+            margin: auto;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            height: 110vw;
+        }
+        .menu {
+            &_1 {
+                &_name {
+                    padding-top: 0px;
+                }
+            }
+
+            &_name {
+                h2 {
+                    text-align: center;
+                }
+            }
+        }
+
+        .submenu {
+
+                .row {
+                    width: 95%;
+                    margin: auto;
+
+                    h4 {
+                        margin: auto;
+                        font-size:1.3em;
+                    }
+                }
+           
+
+            &_content {
+                &_1 {
+                    font-size: 0.8em;
+                }
+
+                &_2 {
+                    &_orange {
+                        font-size: 0.8em;
+                    }
+
+                    &_purple {
+                        font-size: 0.8em;
+                    }
+
+                    &_blue {
+                        font-size: 0.8em;
+                    }
+                }
+
+                &_3 {
+                    font-size: 0.8em;
+                    margin-right: 5px;
+                }
+            }
+        }
+
+        .subtitle {
+            margin: auto;
+        }
+    }
